syntax = "proto3";

option java_multiple_files = true;
package proto;
import "connectionsModel.proto";

service ConnectionsGrpcService{
  rpc createConnection (CreateConnectionRequestProto) returns (CreateConnectionResponseProto);
  rpc respondConnection (RespondConnectionRequestProto) returns (ConnectionResponseProto);
  rpc getConnectionStatus(ConnectionStatusProto) returns (ConnectionStatusResponseProto);
  rpc createBlock (CreateBlockRequestProto) returns (BlockResponseProto);
  rpc getRecommendations(RecommendationsProto) returns (RecommendationsResponseProto);
  rpc getPending(PendingRequestProto) returns (PendingResponseProto);
}
